# src/wallets/dto/wallet.response.ts
@@ -1,0 +1,36 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { WalletStatus } from '@prisma/client';
+
+class WalletLimitsDto {
+  @ApiProperty()
+  minAmountMinor!: number;
+
+  @ApiProperty()
+  perTransactionMaxMinor!: number;
+
+  @ApiProperty()
+  dailyMaxMinor!: number;
+
+  @ApiProperty()
+  dailyUsedMinor!: number;
+}
+
+export class WalletResponse {
+  @ApiProperty()
+  walletId!: string;
+
+  @ApiProperty()
+  userId!: string;
+
+  @ApiProperty()
+  currency!: string;
+
+  @ApiProperty()
+  availableBalanceMinor!: number;
+
+  @ApiProperty({ enum: WalletStatus })
+  status!: WalletStatus;
+
+  @ApiProperty({ type: WalletLimitsDto })
+  limits!: WalletLimitsDto;
+}
